# anno

./: Cargo.toml  Dioxus.toml
.cargo/: config.toml
assets/: main.css  main.css.br
docs/: 404.html  index.html  main.css  main.css.br
docs/assets/dioxus/: anno.js  anno.js.br  anno_bg.wasm  anno_bg.wasm.br
docs/assets/dioxus/snippets/dioxus-interpreter-js-7e2aed97ebee2c55/: inline0.js  inline0.js.br
src/: clipboard.rs  dnd_temp.rs  extraction.rs  main.rs
